Step to JDK8: JDK8, some stream replaced